WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246336
IPC::Connection cannot be bound to arbitrary run loop
https://bugs.webkit.org/show_bug.cgi?id=246336
Summary
IPC::Connection cannot be bound to arbitrary run loop
Kimmo Kinnunen
Reported
2022-10-11 06:52:09 PDT
IPC::Connection cannot be used from arbitrary run loop
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-11 06:54:03 PDT
<
rdar://problem/101030022
>
Kimmo Kinnunen
Comment 2
2022-10-11 07:00:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5234
Matt Woodrow
Comment 3
2022-10-17 20:10:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5476
EWS
Comment 4
2022-10-20 19:41:45 PDT
Committed
255814@main
(e23c41101c83): <
https://commits.webkit.org/255814@main
> Reviewed commits have been landed. Closing PR #5476 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug